--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,19 @@
-.App {
-  text-align: center;
+.note {
+  min-width: 200px;
+  min-height: 200px;
+  height: 200px;
+  width: 200px;
+  background-color: lightblue;
+  display: inline-block;
+  margin: 10px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.noteText{
+  box-sizing: border-box; /* fit parent width */
+  border: none;
+  width: 100%;
+  min-height: 100%;
+  height: 100%;
+  background-color: transparent;
+  font-size: 20px;
 }
