--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,21 @@
+body, .root, .main{
+  width: 100%;
+  height: 100vh;
+  display: inline-block;
+}
+
 .note {
+  position: absolute;
+
   min-width: 200px;
   min-height: 200px;
   height: 200px;
   width: 200px;
   background-color: lightblue;
   display: inline-block;
-  margin: 10px;
 }
 
-.noteText{
+.noteText {
   box-sizing: border-box; /* fit parent width */
   border: none;
   width: 100%;
