--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body, .root, .main{
-  width: 100%;
-  height: 100vh;
+  width: 200%;
+  height: 200vh;
   display: inline-block;
 }
 
@@ -13,6 +13,8 @@ body, .root, .main{
   width: 200px;
   background-color: lightblue;
   display: inline-block;
+
+  zoom: 100%;
 }
 
 .noteText {
