--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,12 @@
 }
 
 .note {
+  /* https://css-tricks.com/almanac/properties/u/user-select/ */
+  -webkit-user-select: none;  /* Chrome all / Safari all */
+  -moz-user-select: none;     /* Firefox all */
+  -ms-user-select: none;      /* IE 10+ */
+  user-select: none;          /* Likely future */
+  resize: none;
   position: absolute;
   box-sizing: border-box;
 
@@ -23,6 +29,8 @@
   display: inline-block;
 
   zoom: 100%;
+
+  border: 2px white solid;
 }
 
 .noteText {
