fixed drag down to refresh, fixed moving notes outside of canvas, fixed dragging notes on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,13 @@
+body {
+  touch-action: none;
+}
+
 .noteContainer{
   display: inline-block;
   width: 100%;
   height: calc(100vh - 24px);
+  overflow: hidden;
+  position: relative;
 }
 
 .selection-box {
